--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,4 +34,12 @@
 body {
   font-family: "Gordita", fantasy;
   background-color: var(--color-bg);
+  padding-top: 30px;
+  transition: padding 0.6s ease;
+}
+
+@media (max-width: 767px) {
+  body {
+    padding-top: 20px;
+  }
 }
