--- a/client/app/components/layout/header.css
+++ b/client/app/components/layout/header.css
@@ -90,6 +90,7 @@
   align-items: center;
   justify-content: center;
   gap: 15px;
+  z-index: 10;
   transform: translateY(-30px);
   opacity: 0;
   pointer-events: none;
