--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -3,6 +3,16 @@
   src: url("/fonts/bricolage.woff2") format("woff2");
 }
 
+@font-face {
+  font-family: "short-stack";
+  src: url("/fonts/short-stack.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "northbank";
+  src: url("/fonts/northbank.woff2") format("woff2");
+}
+
 * {
   margin: 0;
   padding: 0;
