--- a/client/app/components/common/hero.css
+++ b/client/app/components/common/hero.css
@@ -1,14 +1,66 @@
 .hero {
   min-height: calc(100vh - 90px);
-  background-color: white;
+  background-color: inherit;
   position: relative;
   padding: 20px;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 20px;
+  margin-top: 100px;
+}
+
+.main-content .heading {
+  font-family: "northbank";
+  text-transform: uppercase;
+  font-size: 60px;
+}
+
+.main-content .sub-heading {
+  width: 600px;
+}
+
+.main-content button {
+  background-color: inherit;
+  border: 1.5px solid #d97706;
+  font-family: inherit;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  padding: 15px 30px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #1a1a17;
+  border-radius: 50px;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.main-content button:hover {
+  background-color: #d97706;
+  color: #fff;
+}
+
+.main-content button span {
+  font-size: 15px;
+}
+
+.main-content .caret-right {
+  transform: rotate(90deg);
+  width: 20px;
+  height: 20px;
 }
 
 .hero-img {
   position: absolute;
   width: auto;
-  height: 600px;
+  height: 500px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -21,7 +73,7 @@
 .preview-card {
   width: 100%;
   position: absolute;
-  bottom: 200px;
+  bottom: 170px;
   left: 60%;
   transform: translateX(-50%);
   max-width: 350px;
@@ -127,6 +179,55 @@
 
 .input-wrapper > input::placeholder {
   color: #1a1a17;
+}
+
+.earth-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+}
+
+.earth {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 100px;
+  bottom: 100px;
+  animation: rotate 10s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.descriptive-words {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  left: 100px;
+  bottom: 400px;
+  align-items: center;
+}
+
+.descriptive-words p {
+  text-align: center;
+  font-family: "short-stack";
+}
+
+.descriptive-words .wrong {
+  text-decoration: line-through;
+}
+
+.descriptive-words .right {
+  color: #d97706;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 500px) {
