--- a/client/app/components/common/hero.css
+++ b/client/app/components/common/hero.css
@@ -239,3 +239,10 @@
     max-width: 300px;
   }
 }
+
+@media screen and (max-width: 765px) {
+  .hero {
+    margin-top: 30px;
+    min-height: fit-content;
+  }
+}
