--- a/client/app/components/layout/header.css
+++ b/client/app/components/layout/header.css
@@ -83,14 +83,18 @@
 
 .mobile-nav {
   width: 100%;
-  background-color: #fff;
+  background-color: inherit;
   margin-top: 2px;
   display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 15px;
-  z-index: 10;
+  position: absolute;
+  top: 80px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  left: 0;
+  z-index: 20;
   transform: translateY(-30px);
   opacity: 0;
   pointer-events: none;
