--- a/client/app/components/common/hero.css
+++ b/client/app/components/common/hero.css
@@ -3,6 +3,7 @@
   background-color: inherit;
   position: relative;
   padding: 20px;
+  margin-top: 2px;
 }
 
 .main-content {
@@ -230,19 +231,81 @@
   font-weight: 500;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 765px) {
+  .hero {
+    min-height: fit-content;
+    height: fit-content;
+    overflow: hidden;
+    padding: 15px;
+  }
+
+  .hero .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+
+  .main-content {
+    margin-top: 0;
+    order: 1;
+    gap: 20px;
+    z-index: 2;
+  }
+
+  .main-content .heading {
+    font-size: 32px;
+    line-height: 1.1;
+  }
+
+  .main-content .sub-heading {
+    width: 100%;
+    font-size: 14px;
+    line-height: 1.5;
+  }
+
   .hero-img {
+    position: relative;
+    order: 2;
     height: 400px;
+    width: auto;
+    left: auto;
+    bottom: auto;
+    transform: none;
+    margin: 20px 0;
   }
 
   .preview-card {
-    max-width: 300px;
+    display: none;
   }
-}
 
-@media screen and (max-width: 765px) {
-  .hero {
-    margin-top: 30px;
-    min-height: fit-content;
+  .earth-container {
+    padding: 20px;
+  }
+
+  .earth {
+    right: 20px;
+    bottom: 300px;
+    width: 100px;
+    height: 100px;
+  }
+
+  .descriptive-words {
+    left: 20px;
+    gap: 10px;
+  }
+
+  .descriptive-words p {
+    font-size: 14px;
+  }
+
+  .main-content button {
+    padding: 12px 20px;
+    gap: 5px;
+    align-items: center;
+  }
+
+  .main-content button span {
+    font-size: 14px;
   }
 }
